OK, Sidebar toimii nyt, jopa logout! Jäljellä add task ja hifistelyä!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         </ion-list>
 
         <ion-menu-toggle auto-hide="false">
-          <ion-item routerDirection="root" [routerLink]="[appPages.url]" lines="none" detail="false"
+          <ion-item routerDirection="root" [routerLink]="['./home']" lines="none" detail="false"
             routerLinkActive="selected">
             <ion-label>Logout</ion-label>
           </ion-item>
