More trimmed monday page

--- a/src/app/monday/monday.page.html
+++ b/src/app/monday/monday.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<!-- Class for CSS -->
+<!--  -->
 <ion-content>
 <!--  -->
 <h1>Monday</h1>
@@ -17,9 +17,10 @@
 <!-- ion-row and ion-col used to make content apper as wanted.
 One (1) task for each row-->
 <ion-row>
+  <!-- size 9 used to make checkox and delete appear as wanted-->
 <ion-col size="9">
- <!-- NEED CHECKBOX -->
  <ion-checkbox></ion-checkbox>
+ <!-- Here would be task 1-->
   Checkbox Task1
 </ion-col>
 
@@ -29,9 +30,9 @@ One (1) task for each row-->
   <ion-button size="small" color="danger">Delete</ion-button>
 </ion-col>
 </ion-row>
+<!--HERE ENDS TASK1 ROW AND BEGINS TASK2 ROW-->
 <ion-row>
   <ion-col size="9">
-   <!-- NEED CHECKBOX -->
    <ion-checkbox></ion-checkbox>
     Checkbox Task2
   </ion-col>
@@ -42,7 +43,6 @@ One (1) task for each row-->
   </ion-row>
   <ion-row>
     <ion-col size="9">
-     <!-- NEED CHECKBOX -->
      <ion-checkbox></ion-checkbox>
       Checkbox Task3
     </ion-col>
@@ -53,7 +53,6 @@ One (1) task for each row-->
     </ion-row>
     <ion-row>
       <ion-col size="9">
-       <!-- NEED CHECKBOX -->
        <ion-checkbox></ion-checkbox>
         Checkbox Task4
       </ion-col>
