--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,21 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+
+
 
 <ion-content>
-
+  <!-- Adding basic text fields and a button for the login page. The button just redirects to home -->
+  <br><br><br><br><br><br><br>
+  <h3>Welcome to ToDos' app.</h3>
+  <h3> Sign in and start planning!</h3>
+  <br>
+  <ion-item lines="none">
+    <ion-label position="stacked">Username</ion-label>
+    <ion-input></ion-input>
+    </ion-item>
+  <br>
+  <ion-item lines="none">
+  <ion-label position="stacked">Password</ion-label>
+  <ion-input></ion-input>
+  </ion-item>
+  <br>
+  <ion-button expand="block" routerLink="/home" routerDirection="root">Sign In</ion-button>
 </ion-content>
