--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,31 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="C7D3DD">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>home</ion-title>
+        <!--PROFILE PICTURE-->
+        <ion-avatar slot="end">
+          <!--PLACEHOLDER PICTURE FOR PROOF-->
+          <img src="https://i.imgur.com/MfrhA8R.jpg">
+        </ion-avatar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-card color="D6C9C9">
+    <img src= />
+    <ion-card-header>
+      <ion-card-title>Hi User, <br> Let's get busy!</ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  <ion-text color="000000">
+    <h2>You've got ... tasks planned for today</h2>
+  </ion-text>
+  <section>
+    <ion-button expand="block" color="7C238C">Click to see todays's tasks</ion-button>
+  </section>
+<p><em>In attempts to improve your character, 
+  know what is in your power and what is beyond it.
+  <br><br>Francis Thompson</em></p>
 </ion-content>
