--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="C7D3DD">
+  <ion-toolbar color="light">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -13,19 +13,19 @@
 </ion-header>
 
 <ion-content>
-  <ion-card color="D6C9C9">
+  <ion-card color=>
     <img src= />
     <ion-card-header>
       <ion-card-title>Hi User, <br> Let's get busy!</ion-card-title>
     </ion-card-header>
   </ion-card>
-  <ion-text color="000000">
-    <h2>You've got ... tasks planned for today</h2>
+  <ion-text color=>
+    <h2>You've got ... tasks <br> planned for today</h2>
   </ion-text>
   <section>
-    <ion-button expand="block" color="7C238C">Click to see todays's tasks</ion-button>
+    <ion-button expand="block" color="tertiary">Click to see todays's tasks</ion-button>
   </section>
-<p><em>In attempts to improve your character, 
-  know what is in your power and what is beyond it.
+<p><em>In attempts to improve your character, <br>
+  know what is in your power <br> and what is beyond it.
   <br><br>Francis Thompson</em></p>
 </ion-content>
