Sidebar small changes.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
           <ion-menu-toggle auto-hide="false">
             <ion-item routerDirection="root" [routerLink]="['./login']" lines="none" detail="false"
               routerLinkActive="selected">
-              <ion-label>Sign out</ion-label>
+              <ion-label class="signOut">Sign out</ion-label>
               <img
                 src="https://media.istockphoto.com/vectors/checklist-clipboard-and-pencil-icon-flat-design-on-white-background-vector-id1269452744?s=612x612"
                 class="alaKuva">
