--- a/src/app/add/add.page.html
+++ b/src/app/add/add.page.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar class="ion-text-center">
+  <ion-toolbar color="app" class="ion-text-center">
     <ion-buttons slot="end">
       <ion-button (click)="close()" fill="clear" color="dark">
         <ion-icon name="close" slot="icon-only"></ion-icon>
@@ -36,7 +36,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar class="ion-text-center">
+  <ion-toolbar color="app" class="ion-text-center">
     <ion-button color="danger" class="addBtn">Add Tasks</ion-button>
   </ion-toolbar>
 </ion-footer>
