--- a/src/app/monday/monday.page.html
+++ b/src/app/monday/monday.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Monday</ion-title>
     <!--PROFILE PICTURE-->
     <ion-avatar slot="end">
@@ -76,7 +76,7 @@ One (1) task for each row-->
   </ion-grid>
   <!--BUTTON FOR ADDING A NEW TASK-->
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button tappable (click)="itemAdd($event)">
+    <ion-fab-button color="danger" tappable (click)="itemAdd($event)">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
