--- a/src/app/add/add.page.html
+++ b/src/app/add/add.page.html
@@ -10,25 +10,25 @@
 
 <ion-content class="ion-padding">
   <ion-row>
-    <ion-input class="taskInput" placeholder="New task"></ion-input>
+    <ion-input style="background-color: white;" placeholder="New task"></ion-input>
   </ion-row>
-  <p class="p">
+  <p style="text-align: center;">
     Want to add more tasks? These tasks were marked undone yesterday:
   </p>
   <ion-card>
-    <ion-item class="undone">
+    <ion-item style="text-align: center;">
       <ion-icon name="add-circle-outline"></ion-icon>
       <ion-label>Feed cat</ion-label>
     </ion-item>
   </ion-card>
   <ion-card>
-    <ion-item class="undone">
+    <ion-item style="text-align: center;">
       <ion-icon name="add-circle-outline"></ion-icon>
       <ion-label>Exercise</ion-label>
     </ion-item>
   </ion-card>
   <ion-card>
-    <ion-item class="undone">
+    <ion-item style="text-align: center;">
       <ion-icon name="add-circle-outline"></ion-icon>
       <ion-label>Make food</ion-label>
     </ion-item>
@@ -37,6 +37,6 @@
 
 <ion-footer>
   <ion-toolbar color="app" class="ion-text-center">
-    <ion-button color="danger" class="addBtn">Add Tasks</ion-button>
+    <ion-button color="danger">Add Tasks</ion-button>
   </ion-toolbar>
 </ion-footer>
