--- a/src/app/monday/monday.page.html
+++ b/src/app/monday/monday.page.html
@@ -12,18 +12,20 @@
 <!--  -->
 <ion-content>
   <!--HEADER FOR PAGE (MONDAY)-->
-  <ion-row>
+  
+  <ion-row style="background-color: #D6C9C9; padding-top: 5px;">
     <ion-col>
       <ion-list-header>
         <h1>Welcome</h1>
       </ion-list-header>
     </ion-col>
-    <ion-col>
+    <ion-col style="align-self: end; padding-left: 100px;">
+      <img src="./assets/appimg.png">
       <!--PLACEHOLDER FOR DUMMY CONTENT-->
     </ion-col>
   </ion-row>
-  
-  <h4>Here you can see todays tasks</h4>
+  <br>
+  <h4>Here you can see today's tasks</h4>
   <ion-grid [fixed]="true">
 
     <!-- ion-row and ion-col used to make content apper as wanted.
