Some changes to sidebar + Logo.png

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,10 +22,6 @@
               routerLinkActive="selected">
               <ion-label>Home</ion-label>
             </ion-item>
-            <ion-item routerDirection="root" [routerLink]="['./add']" lines="none" detail="false"
-              routerLinkActive="selected">
-              <ion-label>Add task</ion-label>
-            </ion-item>
           </ion-menu-toggle>
           <hr>
           <!--Tässä on viikonpäivät-->
@@ -41,9 +37,7 @@
             <ion-item routerDirection="root" [routerLink]="['./login']" lines="none" detail="false"
               routerLinkActive="selected">
               <ion-label class="signOut">Sign out</ion-label>
-              <img
-                src="https://media.istockphoto.com/vectors/checklist-clipboard-and-pencil-icon-flat-design-on-white-background-vector-id1269452744?s=612x612"
-                class="alaKuva">
+              <img src="./assets/Logo.png" class="alaKuva">
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
