Deletebutton,avatar deleted

--- a/src/app/monday/monday.page.html
+++ b/src/app/monday/monday.page.html
@@ -4,11 +4,6 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Monday</ion-title>
-    <!--PROFILE PICTURE-->
-    <ion-avatar slot="end">
-      <!--PLACEHOLDER PICTURE FOR PROOF-->
-      <img src="https://i.imgur.com/MfrhA8R.jpg">
-    </ion-avatar>
   </ion-toolbar>
 </ion-header>
 
@@ -44,7 +39,9 @@ One (1) task for each row-->
       <ion-col>
         <!-- Button for task deletion, colored red "danger"
   used with each task -->
-        <ion-button size="small" color="danger">Delete</ion-button>
+        <ion-button size="small" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-button>
       </ion-col>
     </ion-row>
     <!--HERE ENDS TASK1 ROW AND BEGINS TASK2 ROW-->
@@ -55,7 +52,9 @@ One (1) task for each row-->
       </ion-col>
 
       <ion-col>
-        <ion-button size="small" color="danger">Delete</ion-button>
+        <ion-button size="small" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -65,7 +64,9 @@ One (1) task for each row-->
       </ion-col>
 
       <ion-col>
-        <ion-button size="small" color="danger">Delete</ion-button>
+        <ion-button size="small" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -75,7 +76,9 @@ One (1) task for each row-->
       </ion-col>
 
       <ion-col>
-        <ion-button size="small" color="danger">Delete</ion-button>
+        <ion-button size="small" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
