implemented a check for username and pw

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,17 +5,18 @@
   <!-- Adding basic text fields and a button for the login page. The button just redirects to home -->
   <br><br><br><br><br><br><br>
   <h3>Welcome to ToDos' app.</h3>
-  <h3> Sign in and start planning!</h3>
+  <h3 id="title"> Sign in and start planning!</h3>
   <br>
   <ion-item lines="none">
     <ion-label position="stacked">Username</ion-label>
-    <ion-input></ion-input>
+    <ion-input id="username"></ion-input>
     </ion-item>
   <br>
   <ion-item lines="none">
   <ion-label position="stacked">Password</ion-label>
-  <ion-input></ion-input>
+  <ion-input id="password"></ion-input>
   </ion-item>
   <br>
-  <ion-button expand="block" routerLink="/home" routerDirection="root">Sign In</ion-button>
+  <ion-button expand="block" id="button">Sign In</ion-button>
+  <!-- routerLink="/home" routerDirection="root"  -->
 </ion-content>
