--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,21 +3,29 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>home</ion-title>
+    <ion-title>Home</ion-title>
         <!--PROFILE PICTURE-->
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-row style="background-color: #D6C9C9; padding-top: 5px;">
   <ion-card color=>
     <img src= />
     <ion-card-header>
       <ion-card-title>Hi User, <br> Let's get busy!</ion-card-title>
     </ion-card-header>
   </ion-card>
-  <ion-text color=>
+  <ion-col style="align-self: end; padding-left: 100px;">
+    <img src="./assets/appimg.png">
+    <!--PLACEHOLDER FOR DUMMY CONTENT-->
+  </ion-col>
+</ion-row>
+  <ion-col class="ion-align-self-center">
+    
+  
     <h2>You've got ... tasks <br> planned for today</h2>
-  </ion-text>
+  </ion-col>
   <section>
     <ion-button expand="block" color="tertiary">Click to see todays's tasks</ion-button>
   </section>
