--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,7 +27,7 @@
     <h2>You've got ... tasks <br> planned for today</h2>
   </ion-col>
   <section>
-    <ion-button expand="block" color="tertiary">Click to see todays's tasks</ion-button>
+    <ion-button expand="block" color="danger">Click to see todays's tasks</ion-button>
   </section>
 <p><em>In attempts to improve your character, <br>
   know what is in your power <br> and what is beyond it.
