--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,14 @@
 em {
-    font-style: italic;
-    
+    font-style: italic;    
+}
+
+h2 {
+    text-align: center;
+    font-weight: bold;
+    margin-left: 20 px;
+}
+
+p {
+    text-align: center;
+    margin-left: 20 px;
 }
