--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,10 +24,10 @@
   <ion-col class="ion-align-self-center">
     
   
-    <h2>You've got ... tasks <br> planned for today</h2>
+    <h2>You've got 4 tasks <br> planned for today</h2>
   </ion-col>
   <section>
-    <ion-button expand="block" color="danger">Click to see todays's tasks</ion-button>
+    <ion-button expand="block" color="danger">Click to see today's tasks</ion-button>
   </section>
 <p><em>In attempts to improve your character, <br>
   know what is in your power <br> and what is beyond it.
