--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <!-- Adding basic text fields and a button for the login page. The button just redirects to home -->
+  <!-- Adding basic text fields and a button for the login page.-->
   <ion-row style="background-color: #C7D3DD; padding-top: 5px;">
     <ion-col>
       <img src="./assets/Logo.png" class="alaKuva">
@@ -14,6 +14,8 @@
   <h3>Welcome to ToDos' app.</h3>
   <h3 id="title"> Sign in and start planning!</h3>
   <br>
+  <!-- Adding the input fields and giving them all ID's
+     that will be called from the typescript file. -->
   <ion-item lines="none">
     <ion-label position="stacked">Username</ion-label>
     <ion-input id="username"></ion-input>
@@ -29,7 +31,7 @@
   <p>Or</p>
   <br>
 
-  <ion-button class="gle" expand="block"><img src="./assets/logogoogleg.png">&nbsp;&nbsp;&nbsp;&nbsp;Sign in with Google
+  <ion-button class="gle" expand="block" id="google"><img src="./assets/logogoogleg.png">&nbsp;&nbsp;&nbsp;&nbsp;Sign in with Google
   </ion-button>
 
 </ion-content>
