--- a/src/app/add/add.page.html
+++ b/src/app/add/add.page.html
@@ -37,6 +37,6 @@
 
 <ion-footer>
   <ion-toolbar color="app" class="ion-text-center">
-    <ion-button color="danger">Add Tasks</ion-button>
+    <ion-button (click)="close()" color="danger">Add Tasks</ion-button>
   </ion-toolbar>
 </ion-footer>
