--- a/src/app/monday/monday.page.html
+++ b/src/app/monday/monday.page.html
@@ -33,7 +33,7 @@ One (1) task for each row-->
       <ion-col size="9" class="col-up">
         <ion-checkbox></ion-checkbox>
         <!-- Here would be task 1-->
-        Checkbox Task1
+        Take out the trash
       </ion-col>
 
       <ion-col>
@@ -48,7 +48,7 @@ One (1) task for each row-->
     <ion-row>
       <ion-col size="9">
         <ion-checkbox></ion-checkbox>
-        Checkbox Task2
+        Feed the cat
       </ion-col>
 
       <ion-col>
@@ -60,7 +60,7 @@ One (1) task for each row-->
     <ion-row>
       <ion-col size="9">
         <ion-checkbox></ion-checkbox>
-        Checkbox Task3
+        Order pizza
       </ion-col>
 
       <ion-col>
@@ -72,7 +72,7 @@ One (1) task for each row-->
     <ion-row>
       <ion-col size="9">
         <ion-checkbox></ion-checkbox>
-        Checkbox Task4
+        Go to gym
       </ion-col>
 
       <ion-col>
